--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@
     <string name="text_already_member">Already have an Account? Login</string>
     <string name="admin_user">I own a bar and want to be an admin</string>
     <string name="no_cards">You have no BarCards :(</string>
-
-
+    <string name="admin_search_label">User Punch Search</string>
+    <string name="admin_search_hint">Email Address</string>
+    <string name="static_punches">Punches:</string>
+    <string name="admin_welcome">Welcome Bar-Card Admin!</string>
+    <string name="search_user">Search for a user</string>
 </resources>
